@@ -26,6 +26,10 @@
 - fix master map lexer to admit "." in macro values (Mike Matera).
 - make ldap attribute match case insensitive.
 - add missed man page update for APPEND_OPTIONS config option.
+- add ldaps protocol support.
+  - note: it's no longer possible to multiple hosts in an ldap map spec.
+  - note: if this is needed use only the map name and configure the URI
+    entry in the ldap client configuration.
 
 20/2/2007 autofs-5.0.1
 ----------------------
